<resources>
    <string name="app_name">ConversorMoedas</string>
    <string name="valor_em_kwuanzas">Qual o valor em Kwanzas?</string>

    <string name="valor_em_dolarLabel">Valor em Dolar ($):</string>
    <string name="valor_em_euroLabel">Valor em Euro (€):</string>

    <string name="valor_em_dolar">parsed Dolar</string>
    <string name="valor_em_euro">parsed Euro</string>

    <string name="converter">Converter</string>
    <string name="informe_valor">Informe um valor!</string>
</resources>