<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/valor_em_kwuanzas"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_value"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:inputType="numberSigned"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_em_dolarLabel"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_dolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:padding="10dp"
        android:text="@string/valor_em_dolar"
        android:textColor="@color/purple_500"
        android:textSize="21sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_em_euroLabel"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:padding="10dp"
        android:text="@string/valor_em_euro"
        android:textColor="@color/purple_500"
        android:textSize="21sp" />

    <Button
        android:id="@+id/btnConverter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/converter"
        android:textColor="@color/colorLight" />

</LinearLayout>